--- a/platformio/Latex/pformio.tex
+++ b/platformio/Latex/pformio.tex
@@ -210,7 +210,7 @@ LED & &3\\
 
  \begin{figure}
 \centering
-\includegraphics[width=0.8\columnwidth]{figs/led1.jpg}
+\includegraphics[width=0.8\columnwidth]{figs/led1(1).jpg}
 \caption{led1}
 \label{fig:led}
 \end{figure}
